<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/translator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.translator.TranslatorFragment"
        tools:ignore="LabelFor"> <!-- ignore accessibility for this moment -->

        <Button
            android:id="@+id/translateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/translate_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sourceText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/source_text_hint_label"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/micButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swapLanguageButton" />

        <EditText
            android:id="@+id/translatedText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/volumeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/translateButton" />

        <Spinner
            android:id="@+id/sourceLanguage"
            android:layout_width="114dp"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/targetLanguage"
            android:layout_width="114dp"
            android:layout_height="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/swapLanguageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/swap_translation_content_description"
            app:layout_constraintEnd_toStartOf="@+id/targetLanguage"
            app:layout_constraintStart_toEndOf="@+id/sourceLanguage"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_swap_horiz" />

        <ImageButton
            android:id="@+id/micButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/dictation_button_content_description"
            app:layout_constraintBottom_toTopOf="@+id/translateButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_mic" />

        <ImageButton
            android:id="@+id/volumeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/listen_button_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_volume" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
